--- a/src/components/HomePage/Card/style.css
+++ b/src/components/HomePage/Card/style.css
@@ -24,6 +24,7 @@
   position: relative;
   overflow: hidden;
   box-shadow: 0px 0px 8px 2px rgb(163, 163, 163);
+  border-radius: 12px;
 }
 
 .card > img {
