--- a/src/components/Profile/EditProfile/style.css
+++ b/src/components/Profile/EditProfile/style.css
@@ -66,6 +66,14 @@
   border-radius: 5px;
 }
 
+.editprofile_button[disabled] {
+  background-color: #c53030;
+  border: 1px solid #c53030;
+  color: #919191;
+  cursor: not-allowed;
+  opacity: 0.7;
+}
+
 /* media query */
 @media only screen and (max-width: 720px) {
   .editprofile_form_container {
